@@ -1,5 +1,10 @@
 2005-04-27  Lutz Mueller <lutz@users.sourceforge.net>
 
+	* libexif/exif-data.c (exif_data_load_data_content): Better check for 
+	validity of tags.
+
+2005-04-27  Lutz Mueller <lutz@users.sourceforge.net>
+
 	* libexif/exif-entry.c (exif_entry_fix): Some day, we'll get this right.
 
 2005-04-27  Lutz Mueller <lutz@users.sourceforge.net>
